crates/shipper-cli/tests/snapshots/cli_snapshots__no_subcommand_error.snap
---
source: crates/shipper-cli/tests/cli_snapshots.rs
expression: normalize_output(&stderr)
---
shipper [VERSION] — resumable, evidence-backed publishing for Rust workspaces

Start here, in this order:
  shipper doctor      check auth, git, tooling, and registry reachability
  shipper plan        preview the deterministic publish order
  shipper preflight   prove the release can finish before anything uploads
  shipper publish     execute the plan — after a stop, inspect retained evidence and follow its typed next action

Usage: shipper [OPTIONS] <COMMAND>

Run `shipper --help` for every command, or `shipper <command> --help` for one.
